updated html and js for theme
trying to fix theme toggle

--- a/components/header.html
+++ b/components/header.html
@@ -15,8 +15,8 @@
             <li><a href="terms.html">Terms of Use</a></li>
             <li><button onclick="window.location.href='feedback.html'">Share Feedback</button></li>
         </ul>
-        <button id="theme-toggle" class="theme-toggle" aria-label="Switch theme">
-            🌙 Night Mode
+        <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
+            <span class="theme-icon">🌙</span>
         </button>
     </div>
 </nav>
