--- a/components/header.html
+++ b/components/header.html
@@ -17,6 +17,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="privacy.html">Privacy Policy</a></li>
             <li><a href="terms.html">Terms of Use</a></li>
+            <a href="/blog/wim-hof-breathing.html"></a>
             <li><button onclick="window.location.href='feedback.html'">Share Feedback</button></li>
         </ul>
 </nav>
