amended _includes folder

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -29,7 +29,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8592180021114462"
     crossorigin="anonymous"></script>
 </head>
-<body>
+<body {% if body_class %}class="{{ body_class }}"{% endif %}>
     <header>
         <!-- Header component will be loaded here by template-loader.js -->
         <div id="header-placeholder"></div>
