--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,10 +1,10 @@
 ---
 layout: base.html
-# Pass data to base.html using the placeholder variables
 additional_head_content: |
   <link rel="stylesheet" href="/styles/blog-post.css">
 additional_scripts: |
   <script src="/scripts/blog-post.js"></script>
+body_class: blog-post-page-body-class # Define a variable for the body class
 ---
 
 <article class="article-content">
