--- a/_includes/article.html
+++ b/_includes/article.html
@@ -37,7 +37,7 @@ body_class: blog-post-page-body-class # Define a variable for the body class
 
     <!-- Main Article Content -->
     <div class="article-body">
-        {{ content | safe }} <!-- Added 'safe' filter for HTML content -->
+        {{ content | safe }} 
     </div>
 
     <!-- Maybe add a comments section placeholder or navigation to other posts -->
